<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tour MPedia</string>
    <string name="head1">Welcome to MP Tourism</string>
    <string name="head2">Explore Your Favourite Journey</string>
    <string name="TouristAttraction">Tourist Attractions</string>
    <string name="TouristDestinations">Destinations</string>
    <string name="ExperienceMP">Experience MP</string>
    <string name="SoundandLightShows">Sound &amp; Light Shows</string>
    <string name="ArtandCraft">Art and Craft</string>
    <string name="MusicandDance">Music and Dance</string>
    <string name="Shopping">Shopping Markets</string>
    <string name="textiles">Textiles of MP</string>
    <string name="NightTourism">Night Tourism</string>
    <string name="PlaceOnWheels">Place On Wheels</string>
    <string name="FFood">Famous Foods</string>
    <string name="Adventure">Adventure Activities</string>
    <string name="Photos">Photos</string>
    <string name="fvrt">Favourite Places</string>
    <string name="Events">Events</string>
    <string name="PlanYourTrip">Plan Your Trip</string>
    <string name="ExploreMP">Explore MP</string>
    <string name="MPGlance">MP Glance</string>
    <string name="FortsPlaces">Forts and Places</string>
    <string name="Museums">Museums</string>
    <string name="ForestandWildlife">Forest and Wildlife</string>
    <string name="Unesco">UNESCO</string>
    <string name="WeddingDestination">Wedding Destination</string>
    <string name="AboutUs">About Us</string>
    <string name="Nature">Nature</string>
    <string name="todo">TODO</string>
    <string name="MPTourism">MP Tourism</string>
    <string name="Spirituals">Spirituals</string>
    <string name="Indore">Indore</string>
    <string name="Annapurna">Annapurna Temple</string>
    <string name="Pitraparvat">Pitraparvat</string>
    <string name="Gulawat">Gulawat (Lotus Valley)</string>
    <string name="Sarafa">Sarafa</string>
    <string name="Khajarana">Khajarana Ganesh Temple</string>
    <string name="PhoenixCitadel">Phoenix Citadel</string>
    <string name="KanchMandir">Kanch Mandir</string>
    <string name="ClothMarket">Cloth Market</string>
    <string name="ChappanDukan">Chappan (56) Dukan</string>
    <string name="Ralamandal">Ralamandal</string>
    <string name="Zoo">Zoo</string>
    <string name="Rajwada">Rajwada Market</string>
    <string name="Patalpani">Patalpani Fall</string>
    <string name="Choraldam">Choral Dam</string>
    <string name="Janapav">Janapav</string>
    <string name="SimchaPark">Simcha Adventure Park</string>
    <string name="annapurna_des">Start your day at Annapurna Temple dedicated to Goddess Annapurna.This Temple is the oldest temple in Indore which was built in the 9th century.</string>
    <string name="gulawat_des">Gulawat Lotus Valley is at a distance of Approx 25 km from Indore city. This beautiful destination is famous for Lotus Valley and pre wedding shoots. Though the Lotus Blossoms here throughout the year but the best time to visit is early morning in winters.</string>
    <string name="pitraparvat_des">Lord Hanuman is seen sitting in the lap of Mother Anjani in this temple. People do not visit Pitra Parvat only for worshipping Lord Hanuman but they also enjoy the great view this place offers to visitors. As the sculpture and the temple is situated on a mountain-top, this place offers a great view of the city.</string>
    <string name="Sarafa_des">From the iconic Indori poha, bhutte ki kees, and sabudana khichdi to the famous garadu (deep-fried yam), and malpua, Sarafa Bazaar has something to offer for every palate and at all times. Sarafa Bazar timings night 09:00 pm to 02:00 am every day, No entry fee. </string>
    <string name="Khajarana_des">he temple has developed a lot over the years. It has developed from a small hut to a huge temple and the most revered shrine in the city. There are regular donation of gold, diamonds and other precious jewels at the temple.</string>
    <string name="chappan_des">Chappan Dukan (Chhappan Dukan/56 Dukan) is a food and shopping Street located in Indore, Madhya Pradesh, India. It is known for its active street food scene and variety of shops, establishing itself as a notable landmark for residents and visitors alike.</string>
    <string name="Pheonix_des">Phoenix Citadel is one of the largest retail and leisure centres in Madhya Pradesh. The gorgeous retail destination offers an impressive line-up of high-end stores for every style, premier dining experiences and endless entertainment. With over 1.0 million sq. ft.</string>
    <string name="Kanchmandir_des">A Jain temple adorning Indore\'s Itwaria Bazaar, it was built by Sir Seth Hukumchand Jain, a preeminent Indian industrialist and trader. Glistening in glass, the foundation stone of the temple was said to be laid in 1903 and completed in July 1921.</string>
    <string name="clothmarket_des">Cloth market is famous for it\'s wholesale rates on cloths</string>
    <string name="zoo_des">It closes at 6 pm in winters and at 7 pm in summers. The zoo remains open all days of week except for Monday which is a weekly off.</string>
    <string name="ralamandal_des">Ralamandal Wildlife Sanctuary is one of the most popular wildlife reserves in India. Established in 1989, this sanctuary spread over 234.550 hac. is an abode to some flora and fauna, indigenous to this part of the country. Hope into the four wheel drives available here for hire, and catch glimpses of Leopards, Black Bucks, Chitals, Blue bulls, Hyena, Barking deers, Peacock, Palm-civet, Porcupine and Hare. Let the scents of Teak, Saja, Gliricidia, Shisham and Eucalyptus entice you further.</string>
    <string name="rajwada_des">It\'s famous for its wholesale cloth market and as an important historical tourist spot in Central India. The city of Rajwada, Indore is connected to significant locations.</string>
    <string name="patalpani_des">The Patalpani Waterfall is located in Mhow Tehsil of Indore district in the state of Madhya Pradesh, India. The waterfall is approximately 300 feet high. The area around Patalpani is a popular picnic and trekking spot. The water flow is highest immediately after the rainy season (usually after July).</string>
    <string name="choral_des">Choral Dam is a hidden gem that will definitely provide you with quietness and tranquility. Constructed around the backwaters of River Narmada, Choral Dam is replete with cool and clear water. A large number of lush green trees and small hills surround the place making it even more attractive. This place is full of jovial water activities that will interest young and old alike.</string>
    <string name="janapav_des">The place is quite popular among trekkers for its scenic beauty and adventurous routes. The place is also famous for being the birthplace of Lord Parshurama and the fair that is held here every year on Kartik Purnima which is the first full moon after Diwali.</string>
    <string name="simcha_des">Simcha is an adventure park in Indore which is spread over 30 acres of land- with green gardens, more than 90 cozy rooms, 7 preen and proper banquets, a spacious concert stage, lip-smacking delicacies and ornate décor with 5 floral lawns.</string>
    <string name="bhedghat_fall"> The Dhuandhar Falls is located on the Narmada River in Bhedaghat and are 30 meters high. The Narmada River, making its way through the world-famous Marble Rocks, narrows down and then plunges into a waterfall known as Dhuandhar.</string>
    <string name="panchmarhi_des">Pachmarhi\'s forests are home to numerous cave paintings, some of which are estimated to be 10,000 years old. The garden at the base of Pandava Caves, a tourist attraction, is depicted in the photograph. Although the caves are Buddhist in nature, the name has stuck.</string>
    <string name="Bhopal">Bhopal</string>
    <string name="Ujjain">Ujjain</string>
    <string name="Gwalior">Gwalior</string>
    <string name="Khajuraho">Khajuraho</string>
    <string name="kharaho_des">The Khajuraho Group of Monuments are a group of Hindu and Jain temples in Chhatarpur district, Madhya Pradesh, India. They are about 175 kilometres southeast of Jhansi, 10 kilometres from Khajwa, 9 kilometres from Rajnagar, and 49 kilometres (30 mi) from district headquarter Chhatarpur. The temples are famous for their Nagara-style architectural symbolism and a few erotic sculptures.</string>
    <string name="jabalpur">Jabalpur</string>
    <string name="mahakal_lok">Mahakaleshwar</string>
    <string name="Maheshwar">Maheshwar</string>
    <string name="Omkareshwar">Omkareshwar Jyotirlinga</string>
    <string name="User">User</string>
    <string name="BookTicket">Book Ticket</string>
    <string name="Panchmarhi">Panchmarhi</string>
    <string name="sarafa_des">Contributing to the fame of Indore’s street food culture, Sarafa Bazar is one of the best places for foodies in Madhya Pradesh.
Offering a number of delicacies like dahi wadas, kachori chaat, petha paan, buttermilk, shikanji and many more, Sarafa Bazaar is a place in Indore where you will not be able to stop yourself from gorging on lip-smacking food.
Filled with a number of stalls bragging of delicious food items, Sarafa Bazaar is a delightful place to spend an evening in Indore.
</string>
    <string name="bandhavgarh">Bandhavgarh National Park (Safari)</string>
    <string name="kanha">Kanha National Park (Safari)</string>
    <string name="kanha_des">* Safari Zone: Night Safari in Buffer Zone\n\n
* Night Safari Timings: 07:30 PM – 10:30 PM\n\n
        * Location: Kanha National Park is nestled in the Maikal range of Satpuras in Madhya Pradesh\n\n
* Kanha National Park has gained popularity for reviving the population of the state animal of Madhya Pradesh- Barasingha which was on the verge of extinction. Do not get surprised with the calls of owls and eagles in the night while trying to spot the wild creatures of the park.
The night jeep safari is an ideal vacation for wildlife and nature enthusiasts alike. Kanha National Park is home to a wide variety of natural beings such as tigers, leopards, bears and many more.</string>
    <string name="pench">Pench National Park (Safari)</string>
    <string name="ujjain1_plan">Morning:\n\n1. Start your day by visiting the Mahakaleshwar Jyotirlinga Temple. One of the most reserved temples in Ujjain. It\'s usually less crowd in the morning.\n\n
        2. Breakfast : Afer the temple visit, have breakfast at a local eatery. You can try some traditional dishes like Poha or Sabudana Khichdi</string>
    <string name="ujjain2">Kal Bhairav Temple</string>
    <string name="ujjain2_plan">Mid-Morning:\n\n3.Head to the Kal Bhaiarav Temple, which is situated close to the Mahakaleshwar Temple.\n\n4. Lunch : Enjoy a delicious vegetarian lunch at a local restaurant serving traditional Malva cuisine</string>
    <string name="ujjain3">Harsiddhi Temple</string>
    <string name="ujjain3_plan">Afternoon:\n\n5. Visit the Harsiddhi Temple, another significant temple in Ujjain.</string>
    <string name="ujjain4">Vikram Kirti Temple</string>
    <string name="ujjain4_plan">6.Explore the Vikram Kirti Temple, a museum that displays artifacts related to the Paramara dynasty and the history of Ujjain.</string>
    <string name="ujjain5">Chintaman Ganesh Temple</string>
    <string name="ujjain5_plan">Evening:\n\n7. Visit the Cintaman Ganesh Temple, Known for its unique architecture and religious significance.\n\n8. Have dinner at a local restaurant or try some street food.</string>
    <string name="ujjain_night">9. If you have time and interest in spirituality, you can participate in the evening Bhajan Sandhya at one of the temples.</string>
</resources>