<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Plan_Trip"
    android:orientation="vertical"
    android:background="@drawable/background_nude"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#9FFFFFFF"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select a city"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/city1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Indore"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/city2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Bhopal"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/city3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Gwalior"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/city4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ujjain"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/city5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Panchmarhi"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/city6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Khajuraho"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/city7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jabalpur"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/city8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Maheshwar"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/city9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Omkareshwar"
                android:textSize="18sp"/>

        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:minHeight="48dp"
            android:text="Next->"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>
