<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <!--  <item
        android:id="@+id/search_icon"
        android:title="search"
        android:icon="@drawable/search_icon"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="com.google.android.material.search.SearchView"/>-->

    <item
        android:id="@+id/plan_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/PlanYourTrip" />
    <item
        android:id="@+id/book_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/BookTicket" />
    <item
        android:id="@+id/User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/User"
        />
</menu>