<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash_activity"
    android:background="@drawable/background_nude">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ADFFFFFF"
            android:orientation="vertical"
            android:gravity="center">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/colorfullogo"
            android:contentDescription="@string/app_name" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/head1"
            android:textAlignment="center"
            android:textColor="@color/darkgreen"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/head2"
            android:textAlignment="center"
            android:textColor="@color/darkgreen"
            android:layout_marginTop="5dp"/>



</LinearLayout>

</LinearLayout>