<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Plan_Ujjain"
    android:orientation="vertical"
    android:background="@drawable/background_nude">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#99E1DCEA"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Day 1"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mahakal_lok"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:background="@color/transparent"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/mahakaleshwar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ujjain1_plan"
            android:background="@color/transparent"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="#01126C"/>
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99E1DCEA"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain2"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/darkBlue"
                    android:background="@color/transparent"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/ujjain2_kal_bhairav"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain2_plan"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:background="@color/transparent"
                    android:textColor="#01126C"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99E1DCEA"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain3"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/darkBlue"
                    android:background="@color/transparent"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/ujjain3_harsiddhi"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain3_plan"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:background="@color/transparent"
                    android:textColor="#01126C"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99E1DCEA"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain4"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/darkBlue"
                    android:background="@color/transparent"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/ujjain3_vikramkirti"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain4_plan"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:background="@color/transparent"
                    android:textColor="#01126C"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99E1DCEA"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain5"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/darkBlue"
                    android:background="@color/transparent"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/ujjain4_chintaman"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain5_plan"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:background="#9FFFFFFF"
                    android:textColor="#01126C"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ujjain_night"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:background="#9FFFFFFF"
                    android:textColor="#01126C"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>