<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NightTourism"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:layout_margin="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NightTourism"
        android:textSize="20sp"
        android:background="@drawable/lower"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/lower"
                android:layout_marginBottom="10dp"
                >

                <ImageButton
                    android:id="@+id/sarafa_btn"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/sarafa_des"
                    android:scaleType="fitXY"
                    android:background="@drawable/sarafa"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sarafa"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/lower"
                android:layout_marginBottom="10dp"
                >

                <ImageButton
                    android:id="@+id/safari1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/kanha_des"
                    android:scaleType="fitXY"
                    android:background="@drawable/night_safari_1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pench"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/lower"
                android:layout_marginBottom="10dp"
                >

                <ImageButton
                    android:id="@+id/safari2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/pench"
                    android:scaleType="fitXY"
                    android:background="@drawable/night_safari2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kanha"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/lower"
                android:layout_marginBottom="10dp"
                >

                <ImageButton
                    android:id="@+id/safari3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/bandhavgarh"
                    android:scaleType="fitXY"
                    android:background="@drawable/night_safari_3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bandhavgarh"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>